--- a/experience.html
+++ b/experience.html
@@ -12,10 +12,12 @@
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="js/jquery.slicknav.min.js"></script>
     <script type="text/javascript">
-        $(document).ready( function() {
+        $(document).ready(function () {
             $('#nav_menu').slicknav({prependTo: "#mobile_menu"})
-        } )
+        })
     </script>
+
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Roboto" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -34,45 +36,54 @@
     </ul>
 </nav>
 <main>
-    <h4>USC Beaufort</h4>
-    <ul class="exp">
-        <li>Supplemental Instruction Leader</li>
-        <li>August 2017</li>
-        <li>College Algebra</li>
-    </ul>
-    <p class="exp">
-        I worked with all college algebra classes that a single professor taught for the semester.
-        I attended the classes and helped with in-class work as needed. My main job was to hold two to
-        three group review sessions each week to cover the material from lecture and review for
-        upcoming tests. I made review material and practice tests to supplement this. I also worked
-        one-on-one with students during my office hours, which I held for three hours every week.
-    </p>
 
-    <h4>USC Beaufort</h4>
-    <ul class="exp">
-        <li>Math Tutor</li>
-        <li>August 2017 &ndash; Present</li>
-        <li>College Algebra &ndash; Calculus I</li>
-    </ul>
-    <p class="exp">
-        I tutored college students in math ranging from college algebra to calculus I. I provided
-        review materials and broke difficult concepts down into easy-to-understand steps. On average,
-        my regular students saw a grade increase of a full letter point or more by the end of the
-        semester.
-    </p>
+        <h4>USC Beaufort</h4>
+        <ul class="exp">
+            <li>Supplemental Instruction Leader</li>
+            <li>August 2017</li>
+            <li>College Algebra</li>
+        </ul>
+        <p class="exp">
+            I worked with all college algebra classes that a single professor taught for the semester.
+            I attended the classes and helped with in-class work as needed. My main job was to hold two to
+            three group review sessions each week to cover the material from lecture and review for
+            upcoming tests. I made review material and practice tests to supplement this. I also worked
+            one-on-one with students during my office hours, which I held for three hours every week.
+        </p>
 
-    <h4>TranscribeMe, Inc.</h4>
-    <ul class="exp">
-        <li>Transcription &amp; Quality Assurance</li>
-        <li>August 2014 &ndash; August 2017</li>
-    </ul>
-    <p class="exp">
-        This was a remote job. I listened to audio files and transcribed all words, added unique
-        speaker tags, and timestamped each line.
-    </p>
+        <h4>USC Beaufort</h4>
+        <ul class="exp">
+            <li>Math Tutor</li>
+            <li>August 2017 &ndash; Present</li>
+            <li>College Algebra &ndash; Calculus I</li>
+        </ul>
+        <p class="exp">
+            I tutored college students in math ranging from college algebra to calculus I. I provided
+            review materials and broke difficult concepts down into easy-to-understand steps. On average,
+            my regular students saw a grade increase of a full letter point or more by the end of the
+            semester.
+        </p>
+
+        <h4>TranscribeMe, Inc.</h4>
+        <ul class="exp">
+            <li>Transcription &amp; Quality Assurance</li>
+            <li>August 2014 &ndash; August 2017</li>
+        </ul>
+        <p class="exp">
+            This was a remote job. I listened to audio files and transcribed all words, added unique
+            speaker tags, and timestamped each line.
+        </p>
 
 </main>
 
-<footer>&copy; amm21</footer>
+<footer>
+    &copy; amm21
+    <br>
+    <script type="text/javascript">
+        var today = new Date();
+        document.write("Current date: ");
+        document.write(today.toDateString());
+    </script>
+</footer>
 </body>
 </html>
