--- a/hobbies.html
+++ b/hobbies.html
@@ -16,6 +16,8 @@
             $('#nav_menu').slicknav({prependTo: "#mobile_menu"})
         })
     </script>
+
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Roboto" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -33,20 +35,21 @@
         <li class="lastitem current"><a href="hobbies.html">Extracurricular</a></li>
     </ul>
 </nav>
+
 <main>
 
+        <!-- photo is my own -->
+        <a target="_blank" href="https://palmettoanimalleague.org/"><img class="hobvol" src="images/foster.png"
+                                                                         alt="foster"></a>
+        <p class="hobvoltitle">Volunteer &amp; Foster, Palmetto Animal League (May 2013 &ndash; present)</p>
+        <p class="hobvoldesc">
+            For over four years I've worked regularly with a local shelter both as a volunteer at their
+            actual facility, and as a foster by taking home animals in need of additional care. Pictured
+            here on the left is Reggie, a three week old kitten who I had for six months until she was
+            ready for adoption. Clicking on her will bring you to the shelter's main website.
+        </p>
 
-    <!-- photo is my own -->
-    <img class="hobvol" src="images/foster.png" alt="foster">
-    <p class="hobvoltitle">Volunteer &amp; Foster, Palmetto Animal League (May 2013 &ndash; present)</p>
-    <p class="hobvoldesc">
-        For over four years I've worked regularly with a local shelter both as a volunteer at their
-        actual facility, and as a foster by taking home animals in need of additional care. Pictured
-        here on the left is Reggie, a three week old kitten who I had for six months until she was
-        ready for adoption.
-    </p>
-
-    <p class="hobvoltitle">Computational Science Note-taker, USCB (August 2017 &ndash; present)</p>
+        <p class="hobvoltitle">Computational Science Note-taker, USCB (August 2017 &ndash; present)</p>
         <p class="hobvoldesc">
             The University of South Carolina Beaufort has accommodations available for students
             with disabilities. Access to notes is one of those accommodations, and I provided
@@ -55,31 +58,42 @@
             disability services department.
         </p>
 
-    <!-- image and information from http://www.nea.org/ -->
-    <img class="hobvol" src="images/read_america.png" alt="readamerica">
-    <p class="hobvoltitle">Read Across America (March 2016)</p>
-    <p class="hobvoldesc">
-        Read Across America is an annual event held on March 2nd that celebrates and promotes
-        reading for children. Hundreds of schools across the country participate. The National
-        Education Association and its sponsors provide support for the event, as well as year-round
-        support for schools trying to promote reading for their students. For my part in this
-        event last fall, I ran the sign-in and welcome center. I also provided the tickets that
-        kids could exchange for free books.
-    </p>
+        <!-- image and information from http://www.nea.org/ -->
+        <a target="_blank" href="http://www.nea.org/"><img class="hobvol" src="images/read_america.png"
+                                                           alt="readamerica"></a>
+        <p class="hobvoltitle">Read Across America (March 2016)</p>
+        <p class="hobvoldesc">
+            Read Across America is an annual event held on March 2nd that celebrates and promotes
+            reading for children. Hundreds of schools across the country participate. The National
+            Education Association and its sponsors provide support for the event, as well as year-round
+            support for schools trying to promote reading for their students. For my part in this
+            event last fall, I ran the sign-in and welcome center. I also provided the tickets that
+            kids could exchange for free books. Clicking on the image to the right will bring you
+            to NEA's official website.
+        </p>
 
-    <!-- image and information from https://soarspecialrecreation.org/ and http://so-sc.org/ -->
-    <img class="hobvol" src="images/SOAR.png" alt="specialolympics">
-    <p class="hobvoltitle">S.O.A.R. Special Olympics (June 2016)</p>
-    <p class="hobvoldesc">
-        S.O.A.R. is an organization that focuses on providing year-round recreation activities
-        for people with disabilities. They work with both children and adults. Every year, they
-        organize the Special Olympics in our area and provide lunch, t-shirts, awards, photos,
-        and an overall fun afternoon for all participants. I helped with general setup work
-        last year.
-    </p>
+        <!-- image and information from https://soarspecialrecreation.org/ and http://so-sc.org/ -->
+        <a target="_blank" href="https://soarspecialrecreation.org/"><img class="hobvol" src="images/SOAR.png"
+                                                                          alt="specialolympics"></a>
+        <p class="hobvoltitle">S.O.A.R. Special Olympics (June 2016)</p>
+        <p class="hobvoldesc">
+            S.O.A.R. is an organization that focuses on providing year-round recreation activities
+            for people with disabilities. They work with both children and adults. Every year, they
+            organize the Special Olympics in our area and provide lunch, t-shirts, awards, photos,
+            and an overall fun afternoon for all participants. I helped with general setup work
+            last year.
+        </p>
 
 </main>
 
-<footer>&copy; amm21</footer>
+<footer>
+    &copy; amm21
+    <br>
+    <script type="text/javascript">
+        var today = new Date();
+        document.write("Current date: ");
+        document.write(today.toDateString());
+    </script>
+</footer>
 </body>
 </html>
