--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="js/jquery.slicknav.min.js"></script>
     <script type="text/javascript">
-        $(document).ready( function() {
+        $(document).ready(function () {
             $('#nav_menu').slicknav({prependTo: "#mobile_menu"})
-        } )
+        })
     </script>
+
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Roboto" rel="stylesheet">
 
 </head>
 
@@ -43,28 +45,36 @@
 </nav>
 
 <main>
-    <img class="amm_img" src="images/amm.png" alt="author_image">
+        <img class="amm_img" src="images/amm.png" alt="author_image">
 
-    <p>
-        My name is Alexis Miller and I’m a junior at the University of South Carolina Beaufort majoring in
-        Computational Science. My expected graduation date is Spring 2020.
-    </p>
 
-    <p>
-        I’m searching for a Summer 2018 internship focused on Software Engineering. I created this website
-        from scratch using HTML, CSS, JavaScript, and some jQuery. It’s responsive to all screen sizes and
-        contains a more detailed version of my resume. My standard resume can be viewed as a pdf below.
-    </p>
+        <p>
+            My name is Alexis Miller and I’m a junior at the University of South Carolina Beaufort majoring in
+            Computational Science. My expected graduation date is Spring 2020.
+        </p>
 
-    <ul id="contact">
-        <li><a href="mailto:amm21@email.uscb.edu">amm21@email.uscb.edu</a></li>
-        <li><a href="tel:+1-732-492-9323">732-492-9323</a></li>
-        <li><a target="_blank" href="documents/alexismiller_resume_092617.pdf">Resume</a></li></li>
-    </ul>
+        <p>
+            I’m searching for a Summer 2018 internship focused on Software Engineering. I created this website
+            from scratch using HTML, CSS, JavaScript, and some jQuery. It’s responsive to all screen sizes and
+            contains a more detailed version of my resume. My standard resume can be viewed as a pdf below.
+        </p>
+
+        <ul id="contact">
+            <li><a href="mailto:amm21@email.uscb.edu">amm21@email.uscb.edu</a></li>
+            <li><a href="tel:+1-732-492-9323">732-492-9323</a></li>
+            <li><a target="_blank" href="documents/alexismiller_resume_092617.pdf">Resume</a></li>
+            </li>
+        </ul>
 </main>
 
 <footer>
     &copy; amm21
+    <br>
+    <script type="text/javascript">
+        var today = new Date();
+        document.write("Current date: ");
+        document.write(today.toDateString());
+    </script>
 </footer>
 </body>
 </html>
